--- a/templates/card.html
+++ b/templates/card.html
@@ -2,7 +2,7 @@
     <div class="card">
         <a href="/artists/{{ .Id }}">
             <div class="image">
-                <img src="{{ .Image }}" alt="card image">
+                <img src="{{ .Image }}" loading="lazy" alt="card image">
             </div>
             <h3 class="title">{{ .Name }}</h3>
         </a>
