--- a/templates/filter-btn.html
+++ b/templates/filter-btn.html
@@ -1,5 +1,5 @@
 {{ define "filter-btn" }}
-    <div class="filter-btn">
+    <div class="filter-btn btn">
         <i class='bx bx-filter icon'></i>
     </div>
 {{ end }}
