--- a/static/styles/master.css
+++ b/static/styles/master.css
@@ -165,6 +165,32 @@ header nav .dark-mode-btn i {
     transition-duration: var(--drt);
 }
 
+/* Buttons Styling */
+.buttons {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.buttons .btn {
+    color: var(--act-color);
+    border: 2px solid var(--act-color);
+    display: flex;
+    padding: 5px 30px 3px;
+    cursor: pointer;
+    font-size: 25px;
+    width: fit-content;
+    border-radius: 5px;
+    transition-duration: var(--drt);
+}
+
+.buttons .btn:hover {
+    background-color: var(--act-color);
+    color: var(--bg-color);
+}
+
 /* Hero Styling */
 .hero {
     min-height: 100vh;
