--- a/static/styles/master.css
+++ b/static/styles/master.css
@@ -169,10 +169,18 @@ header nav .dark-mode-btn i {
 .buttons {
     display: flex;
     gap: 20px;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     margin-bottom: 50px;
     padding: 0 15px;
+    flex-wrap: wrap;
+}
+
+@media (max-width: 530px) {
+    .buttons {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .buttons .btn {
