--- a/static/styles/search.css
+++ b/static/styles/search.css
@@ -1,3 +1,7 @@
+.search-holder {
+    position: relative;
+}
+
 .search-btn {
     padding: 0px !important;
 }
@@ -23,4 +27,58 @@
 
 .search-btn.show i {
     color: red;
+}
+
+.search-holder .suggestions {
+    display: none;    
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 100%;
+    z-index: 1;
+    max-height: 500px;
+    overflow: auto;
+}
+
+.search-holder .suggestions::-webkit-scrollbar {
+    width: 4px;
+}
+
+.search-holder .suggestions::-webkit-scrollbar-thumb {
+    background: #aaa;
+    border-radius: 12px;
+}
+
+.search-holder .suggestions::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.search-btn.show + .suggestions {
+    display: block;
+}
+
+.search-holder .suggestions .sug {
+    background-color: var(--border-color);
+    color: black;
+    padding: 5px 10px;
+    text-transform: capitalize;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+    align-items: center;
+    max-width: 100%;
+    transition-duration: var(--drt);
+}
+
+.search-holder .suggestions .sug:not(:last-child) {
+    border-bottom: 2px solid #dddddd;
+}
+
+.search-holder .suggestions .sug:hover {
+    background-color: var(--act-color);
+}
+
+.search-holder .suggestions .sug .complete {
+    color: darkgray;
 }
