--- a/templates/search-holder.html
+++ b/templates/search-holder.html
@@ -1,6 +1,10 @@
 {{ define "search-holder" }}
-    <form action="/search" method="get" class="btn search-btn">
-        <input type="text" required name="search" placeholder="Search for your artist">
-        <i class='bx bx-search'></i>
+    <form action="/search" method="get" class="search-holder">
+        <div class="search-btn btn">
+            <input type="text" required name="search" placeholder="Search for your artist">
+            <i class='bx bx-search'></i>
+        </div>
+        <div class="suggestions">
+        </div>
     </form>
 {{ end }}
