--- a/static/styles/search.css
+++ b/static/styles/search.css
@@ -1,5 +1,11 @@
 .search-holder {
     position: relative;
+    max-width: 100%;
+    z-index: 1;
+}
+
+.search-holder:has(.search-btn.show) {
+    backdrop-filter: contrast(0.8);
 }
 
 .search-btn {
@@ -13,6 +19,8 @@
     font-size: 16px;
     width: 0px;
     padding: 0px;
+    background-color: transparent;
+    color: var(--text-color);
     transition-duration: var(--drt);
 }
 
@@ -22,6 +30,7 @@
 
 .search-btn.show input {
     width: 300px;
+    max-width: 100%;
     padding: 0 10px;
 }
 
@@ -35,7 +44,6 @@
     width: 100%;
     left: 0;
     top: 100%;
-    z-index: 1;
     max-height: 500px;
     overflow: auto;
 }
@@ -60,12 +68,12 @@
 .search-holder .suggestions .sug {
     background-color: var(--border-color);
     color: black;
-    padding: 5px 10px;
+    padding: 10px;
     text-transform: capitalize;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 20px;
+    gap: 10px;
     align-items: center;
     max-width: 100%;
     transition-duration: var(--drt);
