--- a/templates/search-holder.html
+++ b/templates/search-holder.html
@@ -1,5 +1,5 @@
 {{ define "search-holder" }}
-    <form action="/search" method="get" class="search-holder">
+    <form action="/s" method="get" class="search-holder">
         <div class="search-btn btn">
             <input type="text" required name="search" placeholder="Search for your artist">
             <i class='bx bx-search'></i>
