fix some errors

--- a/templates/filter-holder.html
+++ b/templates/filter-holder.html
@@ -61,7 +61,7 @@
 
             <!-- Submit Holder -->
             <div class="submit-holder">
-                <a class="reset" href="/">Reset</a>
+                <a class="reset" >Reset</a>
                 <input type="submit" value="Submit" class="filter-submit">
             </div>
 
