--- a/templates/search-holder.html
+++ b/templates/search-holder.html
@@ -1,7 +1,7 @@
 {{ define "search-holder" }}
     <form action="/" method="get" class="search-holder">
         <div class="search-btn btn">
-            <input type="text" required name="q" placeholder="Search for your artist">
+            <input autocomplete="off" type="text" required name="q" placeholder="Search for your artist">
             <i class='bx bx-search'></i>
         </div>
         <div class="suggestions">
